extra margin fix

--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -5,7 +5,6 @@
     text-align: center;
     font-size: 12px;
 }
-
 .Header {
     background: #ffffff;
     position: relative;
@@ -13,11 +12,9 @@
     padding: 10px 0px;
     color: #333333;
 }
-
 .bgN.btn-primary {
     margin: 0px 20px;
 }
-
 .bgN.btn-primary,
 .bgN.btn-primary:focus,
 .bgN.btn-primary:not(:disabled):not(.disabled):active {
@@ -27,12 +24,13 @@
     outline: none;
     box-shadow:none!important;
 }
-
 .bgN.btn-primary:hover {
     background-color: transparent;
 }
-
 .mr10 {
     margin-right: 15px;
 }
-
+.mr50 {
+    margin-right: 50px;
+    color: #000;
+}
